@@ -1,3 +1,9 @@
+2007-09-06  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/ContextXMLServlet.java: synchronize the first 
+	call of tryReloadProperties because a race condition can lead to a 
+	NullPointerException with servercontext being null.
+
 2007-08-22  Martin Leidig  <mleidig@schlund.de>
 
 	Send webservice authentication error responses in the requested webservice
